test/conformance/chainsaw/namespaced-mutating-policies/existing/background-scan/configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: test-nmpol-background-scan-cm
  namespace: test-nmpol-background-scan-ns
data:
  key: value
