test/conformance/chainsaw/namespaced-mutating-policies/existing/background-scan/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-nmpol-background-scan-ns
